# multi-agent-trpg-app

./: .gitignore  AGENTS.md  CHANGE_LOG.md  CURRENT_PLAN.md  readme.md
.github/workflows/: backend-ci.yml  repository-ci.yml
backend/: .env.example  coverage.json  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  llm.py
backend/app/db/: README.md  __init__.py  models.py  session.py
backend/tests/: test_db.py  test_health.py  test_llm.py
scripts/: dev.bat  test.bat
