[project]
name = "multi-agent-trpg-app"
version = "0.1.0"
description = "Multi-agent TRPG application"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "langchain",
    "langgraph",
    "pydantic-settings",
    "chromadb",
    "sqlalchemy",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
